--- a/styles.css
+++ b/styles.css
@@ -643,7 +643,7 @@ footer{
         - clear any floats
 */
 #section9{
-    
+    clear: both;
 }
 
 /* ------------- SECTION 9 STYLES ---------------- */
